--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <a href="https://github.com/getlost01" target="_blank" class="github" aria-label="View source on GitHub">
+    <a href="https://link-share-app.netlify.app/" target="_blank" class="github" aria-label="View source on GitHub">
         <img src="/images/link.png" alt="link-share logo" class="logo">
     </a>
     <section class="upload-container">
