--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/images/copy.svg" type="image/x-icon">
     <title>File Sharing</title>
 </head>
 <body>
