--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
        
     </div>
 
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "fhotur5ppi");
+            window.clarity('identify', 'https://link-share-app.netlify.app/'); 
+            window.clarity('set', 'app', "linkshare-frontend");
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3XD3XJ2KLQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-3XD3XJ2KLQ');
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
